# grading-eig

./: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
configs/: base.yaml
src/contenidos_inacap/: main_api.py  main_worker.py
src/contenidos_inacap/adapters/canvas/: __init__.py  canvas_client.py
src/contenidos_inacap/adapters/extractors/: document_text_extractor.py
src/contenidos_inacap/adapters/llm/: openai_evaluator.py
src/contenidos_inacap/adapters/media/: ffmpeg_audio_extractor.py
src/contenidos_inacap/adapters/repositories/: in_memory_material_repository.py
src/contenidos_inacap/adapters/storage/: local_file_storage.py
src/contenidos_inacap/adapters/transcription/: openai_transcriber.py
src/contenidos_inacap/application/dto/: canvas_import_dto.py  evaluation_dto.py  extract_text_dto.py  material_dto.py
src/contenidos_inacap/application/use_cases/: evaluate_student_response.py  extract_text.py  import_material_from_canvas.py  upload_material.py
src/contenidos_inacap/domain/entities/: material.py
src/contenidos_inacap/entrypoints/: api.py  worker.py
src/contenidos_inacap/entrypoints/routers/: evaluations_router.py  materials_router.py
src/contenidos_inacap/ports/: audio_extractor_port.py  document_extractor_port.py  file_storage_port.py  llm_evaluator_port.py  material_repository_port.py  transcription_port.py
src/contenidos_inacap/shared/: config.py  container.py  prompt_loader.py
